--- a/dlnd_image_classification.ipynb
+++ b/dlnd_image_classification.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -475,7 +475,6 @@
     "    : x_tensor: A tensor of size (Batch Size, ...), where ... are the image dimensions.\n",
     "    : return: A tensor of size (Batch Size, Flattened Image Size).\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
     "    return tf.contrib.layers.flatten(x_tensor)\n",
     "\n",
     "\n",
@@ -495,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -516,13 +515,12 @@
     "    : num_outputs: The number of output that the new tensor should be.\n",
     "    : return: A 2-D tensor where the second dimension is num_outputs.\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
     "    shape       = x_tensor.get_shape().as_list()\n",
     "    weights     = tf.Variable(tf.random_normal([shape[-1], num_outputs], mean=0, stddev=0.1))\n",
     "    biases      = tf.Variable(tf.zeros(num_outputs))\n",
     "    full_conv   = tf.add(tf.matmul(x_tensor, weights), biases)\n",
     "    \n",
-    "    return full_conv\n",
+    "    return tf.nn.relu(full_conv)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -543,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -785,7 +783,7 @@
    },
    "outputs": [],
    "source": [
-    "epochs = 8\n",
+    "epochs = 30\n",
     "batch_size = 128\n",
     "keep_probability = 0.5"
    ]
